<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seeker Club</string>
    <string name="welcome_text">Приветствуем Вас\nв клубе для избранных,</string>
    <string name="description_text_1">Если Вы:</string>
    <string name="description_text_2">+ жаждите новых знакомств\n+ не боитесь реальных встреч\n+ хотите в мир приключений</string>
    <string name="description_text_3">Тогда смело жмите:</string>
    <string name="start">Начать действовать</string>
    <string name="settings">Настройки аккаунта</string>
    <string name="vk_auth_button">Вход с помощью VK</string>
    <string name="skip">Пропустить</string>
    <string name="step_1">Выберите тему встречи</string>
    <string name="step_2">Укажите цель поиска</string>
    <string name="step_3">Метод обратной связи</string>
    <string name="next">Далее</string>
    <string name="type_1">Поесть вместе</string>
    <string name="type_2">Прогуляться по городу</string>
    <string name="type_3">Посетить заведение</string>
    <string name="type_4">Выпить вместе кофе</string>
    <string name="type_5">Посетить мероприятие</string>
    <string name="type_6">Посмотреть на звезды</string>
    <string name="type_7">На месте решим</string>
    <string name="male">Парня</string>
    <string name="female">Девушку</string>
    <string name="seeker_gender">Кого хотите найти:</string>
    <string name="seeker_age">Желанный возраст:</string>

    <string-array name="age">
        <item>Младше 18</item>
        <item>18 - 21</item>
        <item>22 - 25</item>
        <item>26 - 29</item>
        <item>Старше 29</item>
    </string-array>

    <string name="postApplication">Запустить сканер на час</string>
    <string name="callback_description">Выберите как Ваша цель сможет выйти на свзяь:</string>
    <string name="via_email">C помощью e-mail</string>
    <string name="via_phone">C помощью мобильного</string>
    <string name="via_social">C помощью соц-сети</string>
    <string name="hint_phone">+380(XX)-XXX-XX-XX</string>
    <string name="hint_email">ilove@seekerclub.com</string>
    <string name="hint_social">vk.com/seeker_club</string>
    <string name="login">Войти</string>
    <string name="register">Я - новый Seeker</string>
    <string name="my_treat">Я угощаю</string>
    <string name="select_your_gender">Укажите свой пол:</string>
    <string name="select_fraction">Выберите фракцию:</string>
    <string name="finishSignIn">Создать аккаунт</string>
    <string name="reg_step_1">Вход в клуб для избранных</string>
    <string name="reg_step_2">Дисклеймер</string>
    <string name="reg_step_3">Выберите фракцию</string>
    <string name="create_user">Подтвердить вступление в клуб</string>
    <string name="hint_name">Представьтесь, пожалуйста</string>
    <string name="hint_new_email">Ваша электронная почта</string>
    <string name="hint_password">Ваш пароль</string>
    <string name="hint_confirm_password">Подтвердите Ваш пароль</string>
    <string name="hint_age">Укажите возрастной диапазон</string>
    <string name="prompt_age">Ваш возраст:</string>
    <string name="chosen_theme">Тема встречи:</string>
    <string name="chosen_treat">Я угощаю:</string>
    <string name="treat_yes">Да, с удовольствием</string>
    <string name="treat_no">Не в этот раз</string>
    <string name="chosen_gender">Кого ищу:</string>
    <string name="chosen_age">Возраст:</string>
    <string name="chosen_callback">Связь:</string>
    <string name="reviseApplication">Просмотреть заявку</string>
    <string name="age_1">Младше 18</string>
    <string name="age_2">18-21</string>
    <string name="age_3">22-25</string>
    <string name="age_4">26-29</string>
    <string name="age_5">Старше 29</string>
    <string name="back">Назад</string>
    <string name="application_summary">Ваша заявка</string>
    <string name="application_summary_check">Проверьте Вашу заявку</string>
    <string name="connection_check">Проверка подключения...</string>
    <string name="location_check">Определяем Ваши координаты...</string>
    <string name="posting_to_server">Создание заявки...</string>
    <string name="scanner_abort">Остановить поиск</string>
    <string name="scanner_searching">Ожидайте предложения о встрече от других пользователей</string>
    <string name="scanner_time">Время до завершения действия Вашей заявки:</string>
    <string name="noti_scanner_ticker">Seeker запущен!</string>
    <string name="noti_scanner_title">Идет сканирование</string>
    <string name="noti_scanner_text">Ожидаение заявок от других пользователей</string>
    <string name="scan_1">Поиск кандидата</string>
    <string name="scan_2">Кандидат найден</string>
    <string name="scan_3">Оценка кандидата</string>
    <string name="disclaimer">Я понимаю, что самостоятельно несу полную ответственность за любые последствия встреч с помошью данного приложения, а также за разглашение собственных персональных данных</string>
    <string name="sign_out">Выход</string>
    <string name="stop_title">Остановить поиск?</string>
    <string name="stop_text">Назначение встречи будет приостановлено</string>
    <string name="show_photo">Открыть фото</string>
    <string name="name">Меня зовут:</string>
    <string name="wants">Я хочу:</string>
    <string name="confirm_meeting">Хочешь встретиться со мной?</string>
    <string name="yes">Да!</string>
    <string name="no">Нет</string>
    <string name="cancel_title">Отказать данному кандидату?</string>
    <string name="cancel_text">Будет продолжен поиск новых заявок</string>
    <string name="agree_title">Подтвердить согласие на встречу?</string>
    <string name="agree_text">Вы обменяетесь контактными данными с этим пользователем если он также согласиться на встречу</string>
    <string name="noti_detected_ticker">Seeker обнаружил кандидата!</string>
    <string name="noti_detected_title">Найден кандидат для встречи</string>
    <string name="noti_detected_text">Подтвердите Ваше согласие</string>
    <string name="cdialog_title">Подтверждение встречи</string>
    <string name="cdialog_text">Ожидайте согласия от</string>
    <string name="cnoti_confirmation_ticker">Ожидайте согласия пользователя!</string>
    <string name="cnoti_confirmation_title">Подтверждение согласия на встречу</string>
    <string name="cnoti_confirmation_text">Ожидайте подтверждения пользователя на встречу</string>
    <string name="cnoti_confirmed_ticker">Кандидат подтвердил встречу!</string>
    <string name="cnoti_confirmed_title">Пользователь согласился на встречу</string>
    <string name="cnoti_confirmed_text">Свяжитесь с ним и назначьте время встречи</string>
    <string name="buy_coins">Пополнить счет</string>
    <string name="new_meeting_menu_text">Новая встреча</string>
    <string name="my_meetings_menu_text">Мои встречи</string>
    <string name="discounts_menu_text">Клубные скидки</string>
    <string name="manifest_menu_text">Манифест</string>
    <string name="menu_contacts_number_text">Получено контактов:</string>
    <string name="menu_meeteings_number_text">Проведено встреч:</string>
    <string name="menu_my_rating_text">Мой рейтинг:</string>
    <string name="menu_coins_number_text">Монет на счету:</string>
    <string name="club_1">Seeker Club: Меню</string>
    <string name="club_2">Мои встречи</string>
    <string name="club_3">Манифест Seeker-а</string>
    <string name="club_4">Дисконт программ</string>
    <string name="menu_logout">Деавторизация</string>
    <string name="google_connected">Google+ вход выполнен</string>
    <string name="google_disconnected">Google+ отключен</string>
    <string name="google_auth_error">Для входа подтвердите обе формы Google+</string>
    <string name="progress_wait">Пожалуйста, подождите</string>
    <string name="progress_loading">Осуществляется загрузка данных</string>

</resources>