<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/background_transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >

            <LinearLayout
                android:id="@+id/layout_type_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/selected_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_2"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_3"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_4"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_5"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_6"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/text_type_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/type_7"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/myTreat_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_treat"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/firstStep_nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>