<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ghost_in_the_shell__cyberpunk_manga"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/d5p" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:id="@+id/summaryThemeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_age"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/selected_text"
                android:textStyle="bold"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/createAccount_ageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/age"
                android:prompt="@string/hint_age" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/createAccount_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer" />

    </LinearLayout>

    <Button
        android:id="@+id/createAccount_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d5p"
        android:text="@string/create_user" />

</LinearLayout>
