<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/background_transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seeker_gender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:typeface="serif" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d5p"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/d5p"
                    android:checked="true"
                    android:text="@string/male"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d5p"
                    android:text="@string/female"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </RadioGroup>

            <TextView
                android:id="@+id/userName_welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seeker_age"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:typeface="serif" />

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/age" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/secondStep_nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>
