<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selected_text"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d5p"
        android:layout_weight="1"
        android:background="@drawable/fancy_border"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d5p"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:src="@drawable/ic_launcher" />

            <Button
                android:id="@+id/application_openPhotoButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_photo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/selected_text"
                android:typeface="serif" />

            <TextView
                android:id="@+id/application_nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wants"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/selected_text"
                android:typeface="serif" />

            <TextView
                android:id="@+id/application_themeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chosen_treat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/selected_text"
                android:typeface="serif" />

            <TextView
                android:id="@+id/application_treatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d15p"
            android:text="@string/confirm_meeting"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="serif" />

        <TextView
            android:id="@+id/application_timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d15p"
            android:text="[ 1:59 ]"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/selected_text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_transparent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/application_noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

        <Button
            android:id="@+id/application_yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>