<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/scanner"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scanner_searching"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/selected_text"
            android:typeface="serif" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:indeterminate="true"
            android:minHeight="150dip"
            android:minWidth="150dip" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scanner_time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[ 59:59 ]"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/scanner_abortButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner_abort" />

</LinearLayout>
